--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "private": true,
     "type": "module",
+    "engines": {
+        "node": "18.x"
+    },
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc && vite build && vite build --ssr"
